# wbparser

./: .gitignore  pyproject.toml  wb_data_full.xlsx
src/: base_methods.py  config.py  constants.py  entrypoint.py  enums.py  namespaces.py  schemas.py
src/parsers/: local_cons.py  wb.py
src/services/: logger.py
user_data/: Last Browser  Local State  first_party_sets.db
user_data/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
user_data/Default/DawnGraphiteCache/: data_1  index
user_data/Default/DawnWebGPUCache/: data_1  index
user_data/Default/Extension Rules/: LOG
user_data/Default/Extension Scripts/: LOG
user_data/Default/Extension State/: LOG  LOG.old
user_data/Default/GCM Store/: LOG  LOG.old
user_data/Default/GPUCache/: data_0  data_1  data_2  index
user_data/Default/JumpListIconsMostVisited/: 04272ce9-93f7-4e79-97df-9cef5111663d.tmp
user_data/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
user_data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  (+7 more)
user_data/GraphiteDawnCache/: data_1  index
user_data/ShaderCache/: data_1  index
user_data/segmentation_platform/: ukm_db
(+1611 files in other folders)
