[tool.poetry]
name = "parsing"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.12"
aiohttp = "3.13.2"
python-dotenv = "^1.2.2"
pandas = "^3.0.2"
openpyxl = "^3.1.5"
playwright = "^1.58.0"
curl-cffi = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
